Bug 1710710: Placement of public search box vs language selector
When we have $cfg->publicsearchallowed = true;
and are viewing the site when logged out and have langpacks installed
we get an overlap of the language selector and searc box.

When we don't have langpacks installed the search box doesn't align to
the right.

This patch tries to align things up correctly

behatnotneeded

--- a/htdocs/theme/raw/sass/layout/nav/_navbar.scss
+++ b/htdocs/theme/raw/sass/layout/nav/_navbar.scss
@@ -63,6 +63,21 @@
         }
     }
 }
+// Allowing the public search to sit in right place
+// when lang selector exists or not
+.loggedout .navbar-form.navbar-collapse {
+    @media (min-width: $screen-sm-min) {
+        right: 0px;
+        margin-right: 15px;
+
+        &.with-langform {
+            right: 270px;
+        }
+        &.with-langform-login {
+            right: 370px;
+        }
+    }
+}
 
 .navbar-default {
     border-left: 0;
